活动相关页面更新

--- a/public/template/add_event.html
+++ b/public/template/add_event.html
@@ -57,11 +57,10 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
               </tr>
               <tr>
                 <th valign="top"><span class="red">*</span>活动标签</th>
-                <td><input name="text" type="text" class="text tag" value="" />
-                      多个名称用“,”隔开
-                        <p class="mt10">热门活动标签：</p>
+                <td><input name="text" style="width:250px;" type="text" class="text tag" value="最近一周" />多个名称用“,”隔开
+                  <p class="mt10">热门活动标签：</p>
                 <ul class="tags mt10">
-                    <li><a href="#">最近一周</a></li>
+                <li class="selected"><a href="#">最近一周</a></li>
                     <li><a href="#">今天</a></li>
                     <li><a href="#">明天</a></li>
                     <li><a href="#">周末</a></li>
