--- a/public/template/event_detail.html
+++ b/public/template/event_detail.html
@@ -60,7 +60,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                 </div>
                 <div class="action">
                 <div class="share">分享到：<a href="#"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a></div>
-                <span class="icon_fol mr5">已报名参加</span><span class="cancl_fol mr5"> <a href="#">(取消)</a></span>
+                <span class="icon_fol mr5">已报名参加</span><span class="cancl_fol mr5"> <a href="#">(取消)</a> <a href="#">(修改报名信息)</a></span>
                 </div>
                 <div class="action">
                 <div class="share">分享到：<a href="#"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a></div>
