--- a/public/template/event_edit.html
+++ b/public/template/event_edit.html
@@ -45,9 +45,9 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
     </div>
     <div id="wrapper950">
       <div class="whitespace addwine">
-        <h1 class="main_title">创建同城活动</h1>
+        <h1 class="main_title">修改活动信息</h1>
             <div class="add_event_step">
-       	    <img src="images/common/add_event_step1.gif" width="180" height="22" /></div>
+   	    <img src="images/common/event_step1.gif" width="180" height="22" /></div>
             <div id="stylized" class="myform mb30">
             <form id="form" name="form" method="post" action="#">
             <table class="form" width="100%" border="0" cellspacing="0" cellpadding="0">
@@ -58,17 +58,6 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
               <tr>
                 <th valign="top"><span class="red">*</span>活动标签</th>
                 <td><input name="text" style="width:250px;" type="text" class="text tag" value="最近一周" />多个名称用“,”隔开
-                <p class="mt10">已选标签：</p>
-                <ul class="tags mt10">
-                    <li><a href="#">最近一周</a></li>
-                    <li><a href="#">今天</a></li>
-                    <li><a href="#">明天</a></li>
-                    <li><a href="#">周末</a></li>
-                    <li><a href="#">晚宴</a></li>
-                    <li><a href="#">培训</a></li>
-                    <li><a href="#">体验活动</a></li>
-                    <li><a href="#">品酒会</a></li>
-                </ul>
                 <p class="mt10">热门活动标签：</p>
                 <ul class="tags mt10">
                     <li><a href="#">最近一周</a></li>
@@ -118,7 +107,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
             </form>
         </div>
         <div class="add_event_step">
-       	    <img src="images/common/add_event_step2.gif" alt="添加活动用酒" width="180" height="22" />
+       	    <img src="images/common/event_step2.gif" alt="添加活动用酒" width="180" height="22" />
         </div>
         <div class="wine_select mb30">
             	<p class="notice_b mb20">已选择的活动用酒：</p>
@@ -147,11 +136,11 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
             </div>
         <div class="mb30 align_c"><a href="add_event_poster.html" class=" btn_gray_b"><span>继续添加</span></a></div>
         <div class="add_event_step">
-       	    <img src="images/common/add_event_step3.gif" alt="上传活动海报" width="180" height="22" />
+       	    <img src="images/common/event_step3.gif" alt="上传活动海报" width="180" height="22" />
         </div>
         <div class="mb30 align_c"><img src="images/test/event_200_01.jpg" width="200" height="300" /></div>
         <div class="mb30 align_c"><a href="add_event_poster.html" class=" btn_gray_b"><span>更改活动海报</span></a></div>
-        <div class="btn_submit"><a href="event_detail.html" class="btn_bluesky_s mr10"><span>立即发布</span></a><a href="#" class="btn_off_s mr10"><span>暂不发布 (保存草稿)</span></a><a href="event.html" class="btn_gray_b"><span>取消</span></a></div>
+        <div class="btn_submit"><a href="event_detail.html" class="btn_bluesky_s mr10"><span>更新</span></a><a href="event.html" class="btn_gray_b"><span>取消</span></a></div>
       </div>
     </div>
     <div id="footer">
