--- a/public/template/myhp.html
+++ b/public/template/myhp.html
@@ -183,6 +183,23 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
             </div>
             <div class="home_right">
             	<div class="title_btn">
+                  <h1>我的活动 <span class="font12 more"><a href="myhp_following_list.html">(查看全部)</a></span></h1>
+                </div>
+                <div class="side_event">
+                <dl class="clearfix">
+                	<dt><a href="event_detail.html"><img src="images/test/event_70_01.jpg" alt="美酒乐调酒体验活动" width="70" height="105" /></a></dt>
+                    <dd>
+                        <h3><a href="event_detail.html">美酒乐调酒体验活动</a></h3>
+                        <div class="info">6月16日至7月29日<br />
+                          上海 浦东新区 成上路云台路<br />
+                          上南八村27号<br />
+                        </div>
+                        <div class="p_count2">35 人参加 | 68人感兴趣</div>
+                    </dd>
+                    <div class="clear"></div>
+                </dl>
+            </div>
+                <div class="title_btn">
                   <h1>关注的人 <span class="font12 more"><a href="myhp_following_list.html">(共20人...)</a></span></h1>
                 </div>
                 <div class="puzzle">
