--- a/public/template/aboutus.html
+++ b/public/template/aboutus.html
@@ -35,7 +35,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
     <div class="globel_navi">
     	<ul>
         	<li class="current"><a href="index.html">首页</a></li>
-            <li class="arrow"><a href="wine.html">酒款</a></li>
+            <li class="arrow"><a href="wine.html">酒</a></li>
             <li class="last arrow"><a href="winery.html">酒庄</a></li>
             <div class="clear"></div>
       </ul>
