--- a/public/template/stylesheets/main.css
+++ b/public/template/stylesheets/main.css
@@ -120,7 +120,7 @@ textarea.wine_intro {width:500px;height:200px;}
 .form th, .form td {padding:5px;}
 label.vm {line-height:25px;}
 .daishou span.tips {display:inline-block;float:right;width:420px;}
-.btn_submit {text-align:center;padding: 30px 0 0 0;border-top:1px solid #ccc;}
+.btn_submit {text-align:center;padding: 30px 0 0 0;}
 
 
 /*--------------form table----------*/
@@ -185,7 +185,7 @@ a.icon_add {background-position:0 -92px; height:14px;width:14px;}
 a.icon_delet2 {background-position:0 -115px;height:13px;width:13px;}
 .follower a.icon_delet2 {position:absolute;left:160px;top:3px;}
 a.icon_cellar {background-position:0 -190px;height:10px;width:10px;}
-.icon_fb, .icon_tt, .icon_sina, .icon_fb_off, .icon_tt_off, .icon_sina_off {background:url(../images/icon/sns_link.gif) no-repeat ;display:block;float:left;height:23px;width:23px; text-indent:-9999px;}
+.icon_fb, .icon_tt, .icon_sina, .icon_fb_off, .icon_tt_off, .icon_sina_off {background:url(../images/icon/sns_link.gif) no-repeat    ;display:block;float:left;height:23px;width:23px; text-indent:-9999px;}
 .icon_tt {background-position: 0 0;}
 .icon_fb {background-position:-28px 0;}
 .icon_sina {background-position:-56px 0;}
@@ -197,6 +197,10 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
 .icon_fol_e {background-position:1px -159px;padding-left:15px;color:#999;}
 .cancl_fol a {color:#a8bbc6;}
 .delet {background:url(../images/icon/delet.png) no-repeat left top;height:19px;width:19px;}
+.icon_edit2 {background:url(../images/icon/icon_all.gif) no-repeat 0 -74px;padding:0 0 0 18px;}
+.icon_cancle {background:url(../images/icon/icon_all.gif) no-repeat 0 -56px;padding:0 0 0 18px; }
+.icon_member {background:url(../images/icon/users.png) no-repeat 0 0;padding: 0 0 0 18px;}
+.icon_join {background:url(../images/icon/join.png) no-repeat 0 -1px;padding: 0 0 0 18px;}
  
 /*--------------star style---------------*/
 .star_s0, .star_s1, .star_s2, .star_s3, .star_s4, .star_s5, .star_s_h, .star_s1_h, .star_s2_h, .star_s3_h, .star_s4_h, .star_s5_h {background:url(../images/icon/allstar.gif) no-repeat;display:inline-block;width:65px;height:12px;_height:7px;}
@@ -227,7 +231,7 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
 .star_rate img {margin-right:1px;}
 
 /*--------- Menu Tabs -------------- */
-.tabs {float:left; width:100%;border-bottom: 1px solid #ccc;line-height:normal;margin:20px 0;}
+.tabs {float:left; width:100%;border-bottom: 1px solid #ccc;line-height:normal;margin:0 0 20px 0;}
 .tabs ul {margin:0;padding:10px 10px 0 0;list-style:none;}
 .tabs li {display:inline; margin:0;padding:0;}
 .tabs a { float:left; margin:0 2px 0 0;padding:5px 15px 5px 15px;text-decoration:none;background-color:#eee;border-radius:5px 5px 0px 0px;color:#666;}
@@ -533,6 +537,12 @@ div.pagination span.disabled {padding-right: 6px; padding-left: 6px; padding-bot
 	-webkit-box-shadow:-1px -1px 1px #999;
 	box-shadow:-1px -1px 1px #999;
 	}
+.tags .selected  a:before {border-color:transparent #ddd transparent transparent;}
+.tags .selected a {background: none repeat scroll 0 0 #ddd;color:#999;}
+.tags .selected a:hover{background:#ddd;}	
+.tags .selected a:hover:before{border-color:transparent #ddd transparent transparent;}
+.tags li.select a {background:#ffcc66;color:#663300;}
+.tags li.select a:before {border-color:transparent #ffcc66 transparent transparent;border-style:solid;border-width:12px 12px 12px 0;}
 .tags a:hover{background:#ffcc66;}	
 .tags a:hover:before{border-color:transparent #ffcc66 transparent transparent;}
 .tags li.select a {background:#ffcc66;color:#663300;}
