修改报名信息、未发布状态添加

--- a/public/template/event_create.html
+++ b/public/template/event_create.html
@@ -118,6 +118,19 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                       地点:  上海 浦东新区 成上路云台路上南八村27号<br />
                     组织者：Sheren</div>
                   <div class="p_count2"><span>54人参加  |  98人感兴趣</span></div>
+                  <div><span class="event_unpublic">未发布</span></div>
+                </dd>
+                <div class="clear"></div>
+            </dl>
+            <dl class="clearfix">
+            	<dt><a href="event_detail.html"><img src="images/test/event_100_01.jpg" alt="鸡尾酒初级品鉴会" width="100" height="150" /></a></dt>
+                <dd>
+               	  <span class="type"><a href="#">品酒会</a></span>
+                    <h2><a href="event_detail.html">鸡尾酒初级品鉴会</a></h2>
+                    <div class="info">时间:  6.17 14:00 - 6.17 20:30<br />
+                      地点:  上海 浦东新区 成上路云台路上南八村27号<br />
+                    组织者：Sheren</div>
+                  <div class="p_count2"><span>54人参加  |  98人感兴趣</span></div>
                   <div><span class="event_end">活动已结束</span></div>
                 </dd>
                 <div class="clear"></div>
@@ -131,7 +144,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                       地点:  上海 浦东新区 成上路云台路上南八村27号<br />
                     组织者：Sheren</div>
                   <div class="p_count2"><span>54人参加  |  98人感兴趣</span></div>
-                  <div><span class="event_cancle">活动已结束</span></div>
+                  <div><span class="event_cancle">活动已取消</span></div>
                 </dd>
                 <div class="clear"></div>
             </dl>
