--- a/public/template/event_join.html
+++ b/public/template/event_join.html
@@ -92,7 +92,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                       地点:  上海 浦东新区 成上路云台路上南八村27号<br />
                     组织者：Sheren</div>
                   <div class="p_count2"><span>54人参加  |  98人感兴趣</span></div>
-                  <div class=""><a class="icon_cancle" href="#">不去了</a></div>
+                  <div class=""><a class="icon_cancle" href="#">不去了</a> | <a class="icon_text_edit" href="#">修改报名信息</a></div>
                 </dd>
                 <div class="clear"></div>
             </dl>
@@ -105,7 +105,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                       地点:  上海 浦东新区 成上路云台路上南八村27号<br />
                     组织者：Sheren</div>
                   <div class="p_count2"><span>54人参加  |  98人感兴趣</span></div>
-                  <div class=""><a class="icon_cancle" href="#">不去了</a></div>
+                  <div class=""><a class="icon_cancle" href="#">不去了</a> | <a class="icon_text_edit" href="#">修改报名信息</a></div>
                 </dd>
                 <div class="clear"></div>
             </dl>
