--- a/public/template/stylesheets/event.css
+++ b/public/template/stylesheets/event.css
@@ -29,8 +29,10 @@
 .base .p_count {margin:0 0 15px 0;}
 .base .action {line-height:40px;margin:0 0 10px 0;}
 .base .share {float:right;}
-.event_end {display:inline-block;background-color:#6CF;color:#fff;padding:2px 5px;border-radius: 5px 5px 5px 5px;}
-.event_cancle {display:inline-block;background-color:#F93;color:#fff;padding:2px 5px;border-radius: 5px 5px 5px 5px;}
+.event_end, .event_cancle, .event_unpublic {display:inline-block;padding:2px 5px;border-radius: 5px 5px 5px 5px;}
+.event_end {background-color:#6CF;color:#fff;}
+.event_cancle {background-color:#F93;color:#fff;}
+.event_unpublic {background-color:#9C3;color:#fff;}
 
 
 .eventmain {padding:30px 40px;}
