活动状态添加

--- a/public/template/event_detail.html
+++ b/public/template/event_detail.html
@@ -55,7 +55,11 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                 组织者：<a href="#">Sheren</a></div>
                 <span class="p_count">54人参加  |  98人感兴趣</span>
                 <div class="action">
-                	<div class="share">分享到：<a href="#"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a></div>
+                	<div class="share lh40">分享到：<a href="#"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a></div>
+                    <span class="full mr5"><em>人数已满</em></span><a href="#" class="btn_bluesky_s"><span>我感兴趣</span></a>
+                </div>
+                <div class="action">
+                	<div class="share lh40">分享到：<a href="#"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a></div>
                     <a href="#" class="btn_bluesky_s mr5"><span>我要参加</span></a><a href="#" class="btn_bluesky_s"><span>我感兴趣</span></a>
                 </div>
                 <div class="action">
@@ -63,8 +67,16 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                 <span class="icon_fol mr5">已报名参加</span><span class="cancl_fol mr5"> <a href="#">(取消)</a> <a href="#">(修改报名信息)</a></span>
                 </div>
                 <div class="action">
-                <div class="share">分享到：<a href="#"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a></div>
+                <div class="share lh40">分享到：<a href="#"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a></div>
                 <a href="#" class="btn_bluesky_s mr5"><span>我要参加</span></a><span class="icon_fol mr5">感兴趣中</span><span class="cancl_fol mr5"> <a href="#">(取消)</a></span>
+                </div>
+                <div class="action">
+                <div class="share">分享到：<a href="#"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a></div>
+                <span class="event_end mr10">活动已结束</span><span class="icon_fol mr5">感兴趣中</span><span class="cancl_fol mr5"> <a href="#">(取消)</a></span>
+                </div>
+                <div class="action">
+                <div class="share">分享到：<a href="#"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a></div>
+               <span class="event_cancle mr10">活动已取消</span><span class="icon_fol mr5">感兴趣中</span><span class="cancl_fol mr5"> <a href="#">(取消)</a></span>
                 </div>
             </div>
             <div class="clear"></div>
