--- a/public/template/event.html
+++ b/public/template/event.html
@@ -37,7 +37,16 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
         	<li class=""><a href="index.html">首页</a></li>
             <li class="arrow"><a href="wine.html">酒款</a></li>
             <li class="arrow"><a href="winery.html">酒庄</a></li>
-            <li class="last arrow current"><a href="event.html">活动</a></li>
+            <li class="arrow">
+            	<a href="wine.html">酒款</a>
+            	<ul class="CategoryDropdown city" style="z-index:1;">
+                	<li>上海</li>
+                    <li>成都</li>
+                    <li>北京</li>
+                    <li>深圳</li>
+                    <li>广州</li>
+                </ul>
+            </li>
           <div class="clear"></div>
       </ul>
     </div>
