--- a/public/template/index.html
+++ b/public/template/index.html
@@ -40,7 +40,7 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
         	<li class="current"><a href="index.html">首页</a></li>
             <li class="arrow">
             	<a href="wine.html">酒款</a>
-            	<ul class="CategoryDropdown">
+            	<ul class="CategoryDropdown" style="z-index:1;">
                 	<li>
                         <p class="title">热门葡萄品种</p>
                         <div class="item">
