--- a/public/template/stylesheets/event.css
+++ b/public/template/stylesheets/event.css
@@ -27,7 +27,8 @@
 .base h1 {font-size:20px;margin:0 0 15px 0;}
 .base .info {margin:0 0 10px 0;}
 .base .p_count {margin:0 0 15px 0;}
-.base .action {line-height:40px;margin:0 0 10px 0;}
+.base .action {margin:0 0 10px 0;}
+.lh40 {line-height:40px;}
 .base .share {float:right;}
 .event_end, .event_cancle, .event_unpublic {display:inline-block;padding:2px 5px;border-radius: 5px 5px 5px 5px;}
 .event_end {background-color:#6CF;color:#fff;}
