--- a/public/template/stylesheets/main.css
+++ b/public/template/stylesheets/main.css
@@ -193,7 +193,7 @@ a.icon_cellar {background-position:0 -190px;height:10px;width:10px;}
 .icon_tt_off {background-position:-28px -27px;}
 .icon_sina_off {background-position:-56px -27px;}
 a.icon_comment {background-position:0 -143px;padding-left:15px;}
-.icon_fol {background-position:3px -204px;padding-left:15px;color:#999;}
+.icon_fol {background-position:3px -215px;padding-left:15px;color:#999;}
 .icon_fol_e {background-position:1px -159px;padding-left:15px;color:#999;}
 .cancl_fol a {color:#a8bbc6;}
 .delet {background:url(../images/icon/delet.png) no-repeat left top;height:19px;width:19px;}
@@ -361,6 +361,7 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
 .message_notice {background:url(../images/bg/message_notice.png) no-repeat left top;display:inline-block;width:91px;height:52px;text-align:center;color:#875f0e;position:absolute;left:-44px;top:38px;padding:20px 5px 0 5px;}
 #header #top_right .message_notice a {float:none;color:#875f0e;}
 #header #top_right .message_notice a:hover {color:#875f0e;text-decoration:none;}
+.globel_navi .city li {display:inline-block;margin:0 -3px 6px 0;}
 
 /*main space*/
 #wrapper950 {width:950px;margin: 30px auto;}
@@ -418,7 +419,7 @@ a.btn_green:hover span {background-position:right -92px;}
 .off a.btn_gray {color:#ccc;}
 .off a.btn_gray:hover {background-position:left top;text-decoration:none;color:#CCC;}
 .off a.btn_gray:hover span {background-position:right top;}
-a.btn_bluesky_b, a.btn_bluesky_b span, a.btn_bluesky_b:hover, a.btn_bluesky_b:hover span, a.btn_createvent, a.btn_createvent span, a.btn_createvent:hover, a.btn_createvent:hover span, a.btn_bluesky_b, a.btn_bluesky_b span, a.btn_bluesky_b:hover, a.btn_bluesky_b:hover span, a.btn_bluesky_s, a.btn_bluesky_s span, a.btn_bluesky_s:hover, a.btn_bluesky_s:hover span, a.btn_off_s, a.btn_off_s span, a.btn_off_s:hover, a.btn_off_s:hover span {background:url(../images/bg/bg_btn_style2.gif) no-repeat;}
+a.btn_bluesky_b, a.btn_bluesky_b span, a.btn_bluesky_b:hover, a.btn_bluesky_b:hover span, a.btn_createvent, a.btn_createvent span, a.btn_createvent:hover, a.btn_createvent:hover span, a.btn_bluesky_b, a.btn_bluesky_b span, a.btn_bluesky_b:hover, a.btn_bluesky_b:hover span, a.btn_bluesky_s, a.btn_bluesky_s span, a.btn_bluesky_s:hover, a.btn_bluesky_s:hover span, a.btn_off_s, a.btn_off_s span, a.btn_off_s:hover, a.btn_off_s:hover span, .full, .full em {background:url(../images/bg/bg_btn_style2.gif) no-repeat;}
 a.btn_createvent {background-position:left top;height:50px;display:inline-block;padding-left:11px;}
 a.btn_createvent span {background-position:right top;height:50px;line-height:50px;display:inline-block;color:#fff;font-size:16px;text-align:center;padding: 0 77px 0 66px;}
 a.btn_createvent:hover {background-position:left -50px;}
@@ -436,6 +437,8 @@ a.btn_off_s span {background-position:right -180px;height:40px;line-height:40px;
 a.btn_off_s:hover {background-position:left -220px;}
 a.btn_off_s:hover span {background-position:right -220px;}
 a.btn_bluesky_s:hover, a.btn_off_s span:hover {text-decoration:none;}
+.full {background-position:left -260px;height:40px;line-height:40px;display:inline-block;color:#888;text-align:center;padding: 0 0 0 15px;font-size:14px;}
+.full em {background-position:right -260px;height:40px;line-height:40px;display:inline-block;padding: 0 25px 0 10px;font-style:normal;}
 
 
 /*------------box style---------------*/
