参与者列表页，未发布活动的发布和编辑按钮

--- a/public/template/event_create_member.html
+++ b/public/template/event_create_member.html
@@ -72,84 +72,53 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
         </div>
           <div class="content">
           	<div class="left">
-           	  <div class="tabs">
-                  <ul>
-                    <li class="current"><a href="event_create.html">创建的活动</a></li>
-                    <li><a href="event_join.html">参加的活动</a></li>
-                    <li><a href="event_follow.html">感兴趣的活动</a></li>
-                  </ul>
-              </div>
-              <div class="title_btn">
-                  <h1>创建的活动</h1>
+          	  <div class="title_btn">
+                <a class="btn_gray float_r" href="event_create.html"><span>返回</span></a>
+                <h1>某某活动的参与者</h1>
                 </div>
-                <div class="event_list">
-        	   <dl class="clearfix">
-            	<dt><a href="event_detail.html"><img src="images/test/event_100_01.jpg" alt="鸡尾酒初级品鉴会" width="100" height="150" /></a></dt>
-                <dd>
-               	  <span class="type"><a href="#">品酒会</a></span>
-                    <h2><a href="event_detail.html">鸡尾酒初级品鉴会</a></h2>
-                    <div class="info">时间:  6.17 14:00 - 6.17 20:30<br />
-                      地点:  上海 浦东新区 成上路云台路上南八村27号<br />
-                    组织者：Sheren</div>
-                  <div class="p_count2"><span>54人参加  |  98人感兴趣</span></div>
-                  <div class=""><a class="icon_edit2" href="#">编辑活动</a> | <a class="icon_cancle" href="#">取消活动</a> | <a class="icon_member" href="event_create_member.html">查看参与者</a></div>
-                </dd>
-                <div class="clear"></div>
-            </dl>
-            <dl class="clearfix">
-            	<dt><a href="event_detail.html"><img src="images/test/event_100_01.jpg" alt="鸡尾酒初级品鉴会" width="100" height="150" /></a></dt>
-                <dd>
-               	  <span class="type"><a href="#">品酒会</a></span>
-                    <h2><a href="event_detail.html">鸡尾酒初级品鉴会</a></h2>
-                    <div class="info">时间:  6.17 14:00 - 6.17 20:30<br />
-                      地点:  上海 浦东新区 成上路云台路上南八村27号<br />
-                    组织者：Sheren</div>
-                  <div class="p_count2"><span>54人参加  |  98人感兴趣</span></div>
-                  <div class=""><a class="icon_edit2" href="#">编辑活动</a> | <a class="icon_cancle" href="#">取消活动</a> | <a class="icon_member" href="#">查看参与者</a></div>
-                </dd>
-                <div class="clear"></div>
-            </dl>
-            <dl class="clearfix">
-            	<dt><a href="event_detail.html"><img src="images/test/event_100_01.jpg" alt="鸡尾酒初级品鉴会" width="100" height="150" /></a></dt>
-                <dd>
-               	  <span class="type"><a href="#">品酒会</a></span>
-                    <h2><a href="event_detail.html">鸡尾酒初级品鉴会</a></h2>
-                    <div class="info">时间:  6.17 14:00 - 6.17 20:30<br />
-                      地点:  上海 浦东新区 成上路云台路上南八村27号<br />
-                    组织者：Sheren</div>
-                  <div class="p_count2"><span>54人参加  |  98人感兴趣</span></div>
-                  <div><span class="event_unpublic mr5">未发布</span><a class="icon_public" href="#">发布</a> | <a class="icon_edit2" href="#">编辑活动</a></div>
-                </dd>
-                <div class="clear"></div>
-            </dl>
-            <dl class="clearfix">
-            	<dt><a href="event_detail.html"><img src="images/test/event_100_01.jpg" alt="鸡尾酒初级品鉴会" width="100" height="150" /></a></dt>
-                <dd>
-               	  <span class="type"><a href="#">品酒会</a></span>
-                    <h2><a href="event_detail.html">鸡尾酒初级品鉴会</a></h2>
-                    <div class="info">时间:  6.17 14:00 - 6.17 20:30<br />
-                      地点:  上海 浦东新区 成上路云台路上南八村27号<br />
-                    组织者：Sheren</div>
-                  <div class="p_count2"><span>54人参加  |  98人感兴趣</span></div>
-                  <div><span class="event_end">活动已结束</span></div>
-                </dd>
-                <div class="clear"></div>
-            </dl>
-            <dl class="clearfix">
-            	<dt><a href="event_detail.html"><img src="images/test/event_100_01.jpg" alt="鸡尾酒初级品鉴会" width="100" height="150" /></a></dt>
-                <dd>
-               	  <span class="type"><a href="#">品酒会</a></span>
-                    <h2><a href="event_detail.html">鸡尾酒初级品鉴会</a></h2>
-                    <div class="info">时间:  6.17 14:00 - 6.17 20:30<br />
-                      地点:  上海 浦东新区 成上路云台路上南八村27号<br />
-                    组织者：Sheren</div>
-                  <div class="p_count2"><span>54人参加  |  98人感兴趣</span></div>
-                  <div><span class="event_cancle">活动已取消</span></div>
-                </dd>
-                <div class="clear"></div>
-            </dl>
-        </div>
-            </div>
+             <div class="event_member_list">
+             	<table width="100%" border="0" cellspacing="0" cellpadding="0">
+                  <tr>
+                    <td class="img"><a href="myhp.html"><img src="images/userimage/07.jpg" width="50" height="50" /></a></td>
+                    <td class="name">赵某某</td>
+                    <td class="email">ying.xiao@sidways.com</td>
+                    <td class="tel">18616825020</td>
+                    <td class="date">2012-8-31</td>
+                  </tr>
+                  <tr>
+                    <td class="img"><a href="myhp.html"><img src="images/userimage/07.jpg" alt="" width="50" height="50" /></a></td>
+                    <td class="name">赵某某</td>
+                    <td class="email">ying.xiao@sidways.com</td>
+                    <td class="tel">18616825020</td>
+                    <td class="date">2012-8-31</td>
+                  </tr>
+                  <tr>
+                    <td class="img"><a href="myhp.html"><img src="images/userimage/07.jpg" alt="" width="50" height="50" /></a></td>
+                    <td class="name">赵某某</td>
+                    <td class="email">ying.xiao@sidways.com</td>
+                    <td class="tel">18616825020</td>
+                    <td class="date">2012-8-31</td>
+                  </tr>
+                  <tr>
+                    <td class="img"><a href="myhp.html"><img src="images/userimage/07.jpg" alt="" width="50" height="50" /></a></td>
+                    <td class="name">赵某某</td>
+                    <td class="email">ying.xiao@sidways.com</td>
+                    <td class="tel">18616825020</td>
+                    <td class="date">2012-8-31</td>
+                  </tr>
+                  <tr>
+                    <td class="img"><a href="myhp.html"><img src="images/userimage/07.jpg" alt="" width="50" height="50" /></a></td>
+                    <td class="name">赵某某</td>
+                    <td class="email">ying.xiao@sidways.com</td>
+                    <td class="tel">18616825020</td>
+                    <td class="date">2012-8-31</td>
+                  </tr>
+                </table>
+             </div>
+             <div class="pagination">
+                  <span class="disabled"> < </span><span class="current">1</span><a href="#?page=2">2</a><a href="#?page=3">3</a><a href="#?page=4">4</a><a href="#?page=5">5</a><a href="#?page=6">6</a><a href="#?page=7">7</a>...<a href="#?page=199">199</a><a href="#?page=200">200</a><a href="#?page=2"> > </a><br />
+              </div>
+          	</div>
             <div class="right">
             <div class="sidebox"><a href="add_event.html" class=" btn_bluesky_s"><span>我要创建活动</span></a></div>
             <div class="title_btn">
