首页分享按钮

--- a/public/template/index.html
+++ b/public/template/index.html
@@ -112,6 +112,9 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                 <a class="btn_iw hf"><span><em>关注</em></span></a>
                 <a class="btn_iw hs"><span><em>分享</em></span></a>
             </div>
+            <div class="dropbox">
+            	<div class="com_s clearfix"><a href="#"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a></div>
+          </div>
         	<div class="iw_img"><a href="wine_profile.html"><img src="images/test/col_img200.jpg" width="200" height="294" /></a></div>
             <div class="iw_info">
                 <h1><a href="wine_profile.html">2001拉菲珍宝</a></h1>
