--- a/public/template/wine_comment_list2.html
+++ b/public/template/wine_comment_list2.html
@@ -45,13 +45,103 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
     <div id="wrapper950">
         <div id="wp_left">
         	<div class="wp_space_line top">
-            	<a href="wine_profile.html" class="btn_gray float_r"><span>返回</span></a>
-                <h1 class="wine_name_ch">上传照片</h1>
+            	<a href="wine_comment_list.html" class="btn_gray float_r"><span>返回所有评论</span></a>
+          <h1 class="wine_name_ch">2005 波特米勒站赤霞珠干红葡萄酒的评论</h1>
                 <div class="clear"></div>
             </div>
-                <div class="wp_space_line ptb30" style="min-height:500px;">
-                <div class="success">上传成功！</div>
-            </div>
+        	<div class="wp_space_line ptb30">
+        	  <ul class="comment_list clearfix">
+        	    <li>
+                    	<div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
+                        <div class="main">
+                        	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                            <div class="content">晚上6点就开瓶入Decanter醒酒，一开始感觉青椒味很重，10点半时倒入杯中呈深不见底的暗红色VS边缘的石榴红色，绝对的Full body酒体。</div>
+                            <div class="userful"><a href="#">有用(3)</a> | <a href="#">回复(9)</a></div>
+                        </div>
+                      <div class="clear"></div>
+                    </li>
+              </ul>
+              <div class="clear"></div>
+            <div class="reply">
+            <div class="tabs">
+                  <ul>
+                    <li class="current"><a href="#">站内回复</a></li>
+                    <li><a href="#">站外回复</a></li>
+                  </ul>
+              </div>
+              <ul class="reply_list clearfix">
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <li>
+                    <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
+                    <div class="main">
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                        <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
+                    </div>
+                </li>
+                <div class="clear"></div>
+            </ul>
+            <div class="post clearfix">
+              <textarea name="" cols="" rows=""></textarea>
+                <p><a href="#" class="btn_gray"><span>回复</span></a></p>
+          </div>
+                <div class="clear"></div>
+                </div>
+        	</div>
           </div>
         <div id="wp_right">
           <div class="wp_count clearfix">
