--- a/public/template/event_home.html
+++ b/public/template/event_home.html
@@ -37,22 +37,53 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
         	<li class=""><a href="index.html">首页</a></li>
             <li class="arrow"><a href="wine.html">酒款</a></li>
             <li class="arrow"><a href="winery.html">酒庄</a></li>
-            <li class="last arrow current"><a href="event.html">活动</a></li>
+            <li class="last arrow current"><a href="winery.html">活动</a></li>
           <div class="clear"></div>
       </ul>
     </div>
     <div id="wrapper950">
+      <div class="kv_2col">
+      	<div class="col mr20">
+            <dl class="clearfix">
+                <dt><a href="event_detail.html"><img src="images/test/event_130_01.jpg" width="130" height="195" /></a></dt>
+                <dd>
+                	<span class="type">培训</span>
+                    <h1><a href="event_detail.html">来调制一杯美酒吧</a></h1>
+                    <div class="info">时间：6.17 14:00 - 6.17 20:30<br />
+                      地点：上海 浦东新区 成上路云台路上南八村27号<br />
+                      费用:  20元<br />
+                  组织者: 大家一起学技能 </div>
+                    <span class="p_count">54人参加  |  98人感兴趣</span>
+              </dd>
+            </dl>
+        </div>
+        <div class="col">
+        <dl class="clearfix">
+                <dt><a href="event_detail.hmtl"><img src="images/test/event_130_02.jpg" alt="来调制一杯美酒吧" width="130" height="195" /></a></dt>
+                <dd>
+                	<span class="type">培训</span>
+                    <h1><a href="event_detail.html">来调制一杯美酒吧</a></h1>
+                    <div class="info">时间:  6.17 14:00 - 6.17 20:30<br />
+                      地点:  上海 浦东新区 成上路云台路上南八村27号<br />
+                      费用:  20元<br />
+                    组织者: 大家一起学技能 </div>
+                    <span class="p_count">54人参加  |  98人感兴趣</span>
+    </dd>
+            </dl>
+        </div>
+        <div class="clear"></div>
+      </div>
       <div class="whitespace eventmain">
    	  <div class="left">
-              <h2>朋友的活动</h2>
-      			<div class="tabs">
-                  <ul>
-                    <li class="current"><a href="search.html">朋友参加的活动</a></li>
-                    <li><a href="search_wine.html">朋友关注的活动</a></li>
-                    <li><a href="search_winery.html">朋友创建的活动</a></li>
-                  </ul>
-                </div>
-      <div class="event_list">
+      	<div class="event_tab clearfix">
+        	<span>热门活动标签：</span>
+            <div class="tab">
+                <p><a class="select" href="#">最近一个月</a><a href="#">今天</a><a href="#">明天</a><a href="#">周末</a></p>
+                <p><a href="#">品酒会</a><a href="#">晚宴</a><a href="#">培训</a><a class="select" href="#">体验活动</a><a href="#">展览</a><a href="#">比赛</a></p>
+            </div>
+            <div class="clear"></div>
+        </div>
+        <div class="event_list">
         	<dl class="clearfix">
             	<dt><a href="event_detail.html"><img src="images/test/event_100_01.jpg" alt="鸡尾酒初级品鉴会" width="100" height="150" /></a></dt>
                 <dd>
@@ -119,10 +150,28 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
               </div>
         </div>
    	  <div class="right">
+      	<div class="sidebox"><a href="add_event.html" class="btn_createvent"><span>我要创建活动</span></a></div>
+       	  <div class="sidebox">
+            <div class="title"><a href="" class="float_r">查看全部</a><h3>我参加/组织的活动</h3></div>
+            <div class="side_event">
+                <dl class="clearfix">
+                	<dt><a href="event_detail.html"><img src="images/test/event_70_01.jpg" alt="美酒乐调酒体验活动" width="70" height="105" /></a></dt>
+                    <dd>
+                        <h3><a href="event_detail.html">美酒乐调酒体验活动</a></h3>
+                        <div class="info">6月16日至7月29日<br />
+                          上海 浦东新区 成上路云台路<br />
+                          上南八村27号<br />
+                        </div>
+                        <div class="p_count2">35 人参加 | 68人感兴趣</div>
+                    </dd>
+                    <div class="clear"></div>
+                </dl>
+            </div>
+            </div>
             <div class="sidebox">
             <div class="title">
               <a href="" class="float_r">查看全部</a>
-              <h3>朋友的活动</h3></div>
+              <h3>朋友参加/组织的活动</h3></div>
             <div class="side_event">
                 <dl class="clearfix">
                 	<dt><a href="event_detail.html"><img src="images/test/event_70_01.jpg" alt="美酒乐调酒体验活动" width="70" height="105" /></a></dt>
