--- a/public/template/winery_comment_list2.html
+++ b/public/template/winery_comment_list2.html
@@ -105,40 +105,21 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
         	<div class="left">
                 <div class="section">
                 	<div class="title">
-                    	<a href="winery_photo_list.html" class="btn_gray float_r"><span>返回</span></a><a href="#" class="btn_gray float_r mr5"><span>上传照片</span></a>
-               	      <h2>所有照片</h2>
-                </div>
+                	  <a href="winery_comment_list.html" class="btn_gray float_r"><span>返回所有评论</span></a>
+              <h2>评论</h2></div>
                     <div class="content">
-                    	<div class="album_left">
-            <div class="mb20">
-                <div class="pre_next"><span class="off"><a class="btn_gray mr5"><span>前一张</span></a></span><span class="count">1 / 25</span> <a href="#" class="btn_gray"><span>后一张</span></a></div>
-            </div>
-            <div class="photo">
-                <img src="images/test/winery_photo_b.jpg" width="537" height="334" alt="photo" />
-            </div>
-              <div class="info">
-            	<div class="like float_r"><a href="#" class="icon_like">赞 (3)</a></div>
-                <div class="share float_r">分享到：<a href=" #"><img src="images/icon/sina_s_on.png" alt="新浪" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/tencen_s_on.png" alt="腾讯" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/douban_s_on.png" alt="豆瓣" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/kaixin_s_on.png" alt="开心网" width="17" height="17" align="absmiddle" /></a><a href="#"><img src="images/icon/renren_s_on.png" alt="人人网" width="17" height="17" align="absmiddle" /></a> |</div>
-                <div>10浏览 | 4评论</div>
-            </div>
-            <div class="comment">
-       	    <div class="mb20 clearfix">
-                <div class="title">
-                <a href="#01" class="btn_gray float_r"><span>添加评论</span></a>
-                <h3>评论</h3>
-                </div>
-              </div>
-               <ul class="comment_list">
-                	<li>
-                    	<div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
-                        <div class="main">
-                        	<div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
-                            <div class="content">好诱人的咖喱啊，我也好想吃！</div>
-                        </div>
-                    </li>
-                    <div class="clear"></div>
-              </ul>
-              <div class="reply">
+                    	<ul class="comment_list clearfix">
+                            <li>
+                                <div class="userpic"><a href="#"><img src="images/userimage/1.jpg" width="50" height="50" alt="username" /></a></div>
+                                <div class="main">
+                                    <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
+                                    <div class="content">晚上6点就开瓶入Decanter醒酒，一开始感觉青椒味很重，10点半时倒入杯中呈深不见底的暗红色VS边缘的石榴红色，绝对的Full body酒体。</div>
+                                    <p><a href="#">有用(12)</a> | <a href="#">回复</a> | <a href="#">删除</a></p>
+                                </div>
+                            </li>
+                        </ul>
+                        <div class="clear"></div>
+                        <div class="reply">
             <div class="tabs">
                   <ul>
                     <li class="current"><a href="#">站内回复</a></li>
@@ -156,35 +137,35 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                 <li>
                     <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
                     <div class="main">
-                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
                         <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
                     </div>
                 </li>
                 <li>
                     <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
                     <div class="main">
-                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
                         <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
                     </div>
                 </li>
                 <li>
                     <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
                     <div class="main">
-                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
                         <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
                     </div>
                 </li>
                 <li>
                     <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
                     <div class="main">
-                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
                         <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
                     </div>
                 </li>
                 <li>
                     <div class="userpic"><a href="#"><img src="images/userimage/user30.jpg" width="30" height="30" alt="username" /></a></div>
                     <div class="main">
-                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span><span class="sns">来自新浪微博</span></div>
+                        <div class="username"><a href="#">不良夏生</a><span class="date">2012-4-28</span></div>
                         <div class="content">矿石和泥土的气息，黑醋栗、黑莓的果味伴随着香草味，浓郁而强烈</div>
                     </div>
                 </li>
@@ -216,14 +197,12 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                 <p><a href="#" class="btn_gray"><span>回复</span></a></p>
           </div>
                 <div class="clear"></div>
-              </div>
-            </div>
                 </div>
                     </div>
-              </div>
+                </div>
         	</div>
             <div class="right">
-           	  <div class="sidebox">
+            	<div class="sidebox">
                 	<div class="title">
                 	  <h3><a name="05" id="05"></a>热门酒庄</h3></div>
                     <div class="main">
@@ -267,10 +246,34 @@ function css_browser_selector(u){var ua=u.toLowerCase(),is=function(t){return ua
                         </ul>
                     </div>
                 </div>
+                <div class="sidebox">
+                	<div class="title"><h3>关注这个酒庄的人<span class="font12 more"><a>(共21人...)</a></span></h3></div>
+                    <div class="main">
+                    	<ul class="follower">
+                        	<li><a href="#"><img src="images/userimage/2.jpg" width="50" height="50" alt="username" /></a></li>
+                            <li><img src="images/userimage/08.jpg" width="50" height="50" alt="username" /></li>
+                            <li><a href="#"><img src="images/userimage/03.jpg" width="50" height="50" alt="username" /></a></li>
+                            <li><img src="images/userimage/04.jpg" width="50" height="50" alt="username" /></li>
+                            <li><a href="#"><img src="images/userimage/4.jpg" width="50" height="50" alt="username" /></a></li>
+                            <li><a href="#"><img src="images/userimage/07.jpg" width="50" height="50" alt="username" /></a></li>
+                            <li><a href="#"><img src="images/userimage/2.jpg" width="50" height="50" alt="username" /></a></li>
+                            <li><img src="images/userimage/08.jpg" width="50" height="50" alt="username" /></li>
+                            <li><a href="#"><img src="images/userimage/03.jpg" width="50" height="50" alt="username" /></a></li>
+                            <li><img src="images/userimage/04.jpg" width="50" height="50" alt="username" /></li>
+                            <li><a href="#"><img src="images/userimage/4.jpg" width="50" height="50" alt="username" /></a></li>
+                            <li><a href="#"><img src="images/userimage/07.jpg" width="50" height="50" alt="username" /></a></li>
+                            <li><a href="#"><img src="images/userimage/2.jpg" width="50" height="50" alt="username" /></a></li>
+                            <li><img src="images/userimage/08.jpg" width="50" height="50" alt="username" /></li>
+                            <li><a href="#"><img src="images/userimage/03.jpg" width="50" height="50" alt="username" /></a></li>
+                            <li><img src="images/userimage/04.jpg" width="50" height="50" alt="username" /></li>
+                            <div class="clear"></div>
+                        </ul>
+                    </div>
+                </div>
             </div>
             <div class="clear"></div>
         </div>
-</div>
+    </div>
     <div id="footer">
         <div class="link"><a href="aboutus.html">关于我们</a> | <a href="contactus.html">联系我们</a> | <a href="help.html">帮助中心</a> | <a href="privacy.html">隐私条款</a> | <a href="agreement.html">用户协议</a> | <a href="disclaimer.html">免责声明</a> | <a href="sitemap.html">网站地图</a> | <a href="feedback.html">意见反馈</a></div>
         <div class="copyright">Copyright © 2011 iWine, Inc. All rights reserved. <a href="#">沪ICP备12345678号</a></div>
